# life

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
doc/: Doxyfile  README.md
doc/pages/: mainpage.md
docs/: classes.html  dir_45ceaae7855647d8e15cc2abf65b95d9.html  dir_d44c64559bbebec7f509842c48db8b23.html  globals_type.html  graph_legend.html  simulation_8h.html  simulation_8h__incl.md5
docs/html/: files.html  structgol__cell__coll__graph.map  structgol__grid__position.html
docs/html/search/: all_2.js  enums_0.js  enumvalues_0.js  functions_0.js  groups_0.js  variables_2.js
docs/search/: all_5.js  all_a.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js
gh_pages/html/: annotated.html  dir_0c8c18f1a78e309dcea6668dae9d63c6.html  dir_0c8c18f1a78e309dcea6668dae9d63c6_dep.map  dir_0c8c18f1a78e309dcea6668dae9d63c6_dep.md5  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__simulation__api.html  index.html  simulation_8h__incl.map  simulation_8h_source.html  structgol__cell.html  structgol__cell__coll__graph.md5  structgol__simulation__property__grid__access__profiling.html  topics.html
gh_pages/html/search/: all_4.js  all_7.js  all_8.js  all_9.js  classes_0.js  groups_1.js
include/gol/: simulation.h
life_core/: CMakeLists.txt
life_core/doc/: Doxyfile  README.md
life_core/doc/pages/: mainpage.md
life_core/include/gol/: simulation.h
life_core/src/: simulation.c
life_core/tests/functional/: CMakeLists.txt  test_simulation.cpp
src/: cell_data.h  chunk.h  gol_debug.h  simulation.c  simulation_data.c  simulation_data.h
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  test_simulation.cpp
